--- a/.github/workflows/sb3-to-apk.yml
+++ b/.github/workflows/sb3-to-apk.yml
@@ -1,75 +1,182 @@
-name: SB3 to APK Build
+name: SB3 转 APK 自动构建
 on:
   workflow_dispatch:
     inputs:
       package_name:
-        description: 'Android 包名 (例如: com.yourname.game)'
+        description: 'APK 包名（符合 Android 规范，例如：com.example.myapp）'
         required: true
         type: string
       app_name:
-        description: '应用名称 (例如: MyScratchGame)'
+        description: '应用显示名称（例如：我的Scratch应用）'
         required: true
         type: string
       sb3_filename:
-        description: '项目中 .sb3 文件名 (例如: game.sb3)'
+        description: 'project 文件夹下的 .sb3 文件名（例如：demo.sb3）'
         required: true
         type: string
 
 jobs:
-  build:
+  build-apk:
     runs-on: ubuntu-latest
-    steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
+    env:
+      # 全局环境变量，统一路径和版本
+      TURBOWARP_DIR: Turbowarp-packager
+      PROJECT_DIR: ${{ github.workspace }}/project
+      OUTPUT_HTML_DIR: ${{ github.workspace }}/output-html
+      CORDOVA_DIR: ${{ github.workspace }}/cordova-project
 
-      - name: 设置 Node.js 环境
+    steps:
+      # 步骤1：检出当前仓库代码（包含 project 文件夹）
+      - name: 检出仓库代码
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # 步骤2：检查 SB3 文件是否存在
+      - name: 验证 SB3 文件
+        run: |
+          SB3_PATH="${PROJECT_DIR}/${{ inputs.sb3_filename }}"
+          if [ ! -f "$SB3_PATH" ]; then
+            echo "错误：未找到 SB3 文件 - $SB3_PATH"
+            ls -la "$PROJECT_DIR"
+            exit 1
+          fi
+          echo "✅ 找到 SB3 文件：$SB3_PATH"
+
+      # 步骤3：克隆 TurboWarp Packager 仓库（若未包含在当前仓库）
+      - name: 克隆 TurboWarp Packager
+        run: |
+          if [ ! -d "${TURBOWARP_DIR}" ]; then
+            git clone https://github.com/TurboWarp/packager.git "${TURBOWARP_DIR}"
+          fi
+          ls -la "${TURBOWARP_DIR}"
+
+      # 步骤4：配置 Node.js 环境（Turbowarp 依赖 Node.js）
+      - name: 设置 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: ${{ env.TURBOWARP_DIR }}/package-lock.json
 
-      - name: 安装 Turbowarp Packager
-        run: npm install -g turbowarp-packager
-
-      - name: 🔄 SB3 → HTML
+      # 步骤5：安装 Turbowarp 依赖并构建 Node API
+      - name: 构建 Turbowarp Node 模块
         run: |
-          mkdir -p dist
-          turbowarp-packager "project/${{ inputs.sb3_filename }}" --output dist/index.html --html
+          cd "${TURBOWARP_DIR}"
+          npm ci  # 安装依赖（严格匹配 lock 文件）
+          npm run build-node-prod  # 构建 Node.js 版本的 API
 
-      - name: 设置 JDK 17 (Android 构建必需)
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: 设置 Android SDK
-        uses: android-actions/setup-android@v3
-        with:
-          api-level: 33
-          build-tools: '33.0.0'
-          target: 'android-33'
-
-      - name: 安装 Cordova
-        run: npm install -g cordova@12.0.0
-
-      - name: 初始化 Cordova 项目
+      # 步骤6：编写 SB3 转 HTML 的脚本
+      - name: 生成转换脚本
         run: |
-          cordova create cordova_build "${{ inputs.package_name }}" "${{ inputs.app_name }}"
-          cd cordova_build
-          cordova platform add android@12.0.1
+          cat > "${TURBOWARP_DIR}/convert-sb3.js" << 'EOF'
+          const fs = require('fs');
+          const path = require('path');
+          const Packager = require('./dist-node/index.js');
 
-      - name: 部署 HTML 到 Cordova
+          // 环境变量传入的参数
+          const sb3Path = process.env.SB3_PATH;
+          const outputHtmlPath = process.env.OUTPUT_HTML_PATH;
+
+          // 核心转换逻辑
+          const run = async () => {
+            // 创建输出目录
+            fs.mkdirSync(path.dirname(outputHtmlPath), { recursive: true });
+            
+            // 读取 SB3 文件
+            console.log(`📥 读取 SB3 文件: ${sb3Path}`);
+            const projectData = fs.readFileSync(sb3Path);
+
+            // 加载 Scratch 项目
+            console.log('🔧 加载项目...');
+            const loadedProject = await Packager.loadProject(projectData);
+
+            // 初始化 Turbowarp 打包器
+            const packager = new Packager.Packager();
+            packager.project = loadedProject;
+            packager.options.target = 'html'; // 指定输出为 HTML
+            packager.options.turbo = true;    // 启用 Turbo 模式优化
+
+            // 执行打包
+            console.log('⚙️ 转换 SB3 到 HTML...');
+            const result = await packager.package();
+
+            // 写入 HTML 文件
+            fs.writeFileSync(outputHtmlPath, result.data);
+            console.log(`✅ HTML 生成完成: ${outputHtmlPath}`);
+          };
+
+          // 执行并捕获错误
+          run().catch((err) => {
+            console.error('❌ 转换失败:', err);
+            process.exit(1);
+          });
+          EOF
+        env:
+          SB3_PATH: ${{ env.PROJECT_DIR }}/${{ inputs.sb3_filename }}
+          OUTPUT_HTML_PATH: ${{ env.OUTPUT_HTML_DIR }}/index.html
+
+      # 步骤7：执行 SB3 转 HTML 脚本
+      - name: 转换 SB3 到 HTML
         run: |
-          rm -rf cordova_build/www/*
-          cp -r dist/* cordova_build/www/
+          cd "${TURBOWARP_DIR}"
+          node convert-sb3.js
 
-      - name: 构建 APK
+      # 步骤8：安装 Android 构建环境和 Cordova（HTML 转 APK 工具）
+      - name: 安装 Android & Cordova 依赖
         run: |
-          cd cordova_build
-          cordova build android --release -- --packageType=apk
+          # 安装系统依赖
+          sudo apt-get update
+          sudo apt-get install -y \
+            openjdk-17-jdk \
+            android-sdk \
+            gradle \
+            unzip \
+            wget
 
-      - name: 📦 上传 APK 产物
+          # 安装 Cordova
+          npm install -g cordova@12.0.0
+
+          # 配置 Android SDK 环境变量
+          echo "ANDROID_HOME=/usr/lib/android-sdk" >> $GITHUB_ENV
+          echo "PATH=\$PATH:/usr/lib/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_ENV
+
+          # 自动接受 Android SDK 许可
+          yes | sdkmanager --licenses || true
+
+          # 安装必要的 Android 组件（API 34 兼容大部分设备）
+          sdkmanager "platforms;android-34" "build-tools;34.0.0" "platform-tools"
+
+      # 步骤9：创建 Cordova 项目并打包 APK
+      - name: 用 Cordova 打包 HTML 为 APK
+        run: |
+          # 创建 Cordova 项目目录
+          mkdir -p "${CORDOVA_DIR}"
+          cd "${CORDOVA_DIR}"
+
+          # 初始化 Cordova 项目（指定包名和应用名）
+          cordova create app ${{ inputs.package_name }} "${{ inputs.app_name }}"
+          cd app
+
+          # 添加 Android 平台
+          cordova platform add android@12.0.0
+
+          # 替换 Cordova 默认页面为生成的 HTML
+          rm -rf www/*
+          cp -r "${OUTPUT_HTML_DIR}"/* www/
+
+          # 构建 APK（Debug 版本，无需签名）
+          cordova build android --debug
+
+          # 查找生成的 APK 并复制到易访问路径
+          APK_PATH=$(find platforms/android/app/build/outputs/apk/debug -name "*.apk" | head -1)
+          cp "$APK_PATH" "${CORDOVA_DIR}/${{ inputs.app_name }}_debug.apk"
+          echo "✅ APK 生成完成: ${CORDOVA_DIR}/${{ inputs.app_name }}_debug.apk"
+
+      # 步骤10：上传 APK 作为构建产物（供下载）
+      - name: 上传 APK 产物
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ inputs.app_name }}-APK
-          path: cordova_build/platforms/android/app/build/outputs/apk/release/app-release.apk
-          retention-days: 30
+          name: ${{ inputs.app_name }}-apk-${{ github.run_id }}
+          path: ${{ env.CORDOVA_DIR }}/${{ inputs.app_name }}_debug.apk
+          retention-days: 30  # 产物保留 30 天
