--- a/.github/workflows/sb3-to-apk.yml
+++ b/.github/workflows/sb3-to-apk.yml
@@ -1,182 +1,32 @@
-name: SB3 转 APK 自动构建
-on:
-  workflow_dispatch:
-    inputs:
-      package_name:
-        description: 'APK 包名（符合 Android 规范，例如：com.example.myapp）'
-        required: true
-        type: string
-      app_name:
-        description: '应用显示名称（例如：我的Scratch应用）'
-        required: true
-        type: string
-      sb3_filename:
-        description: 'project 文件夹下的 .sb3 文件名（例如：demo.sb3）'
-        required: true
-        type: string
-
-jobs:
-  build-apk:
-    runs-on: ubuntu-latest
-    env:
-      # 全局环境变量，统一路径和版本
-      TURBOWARP_DIR: Turbowarp-packager
-      PROJECT_DIR: ${{ github.workspace }}/project
-      OUTPUT_HTML_DIR: ${{ github.workspace }}/output-html
-      CORDOVA_DIR: ${{ github.workspace }}/cordova-project
-
-    steps:
-      # 步骤1：检出当前仓库代码（包含 project 文件夹）
-      - name: 检出仓库代码
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # 步骤2：检查 SB3 文件是否存在
-      - name: 验证 SB3 文件
-        run: |
-          SB3_PATH="${PROJECT_DIR}/${{ inputs.sb3_filename }}"
-          if [ ! -f "$SB3_PATH" ]; then
-            echo "错误：未找到 SB3 文件 - $SB3_PATH"
-            ls -la "$PROJECT_DIR"
-            exit 1
-          fi
-          echo "✅ 找到 SB3 文件：$SB3_PATH"
-
-      # 步骤3：克隆 TurboWarp Packager 仓库（若未包含在当前仓库）
-      - name: 克隆 TurboWarp Packager
-        run: |
-          if [ ! -d "${TURBOWARP_DIR}" ]; then
-            git clone https://github.com/TurboWarp/packager.git "${TURBOWARP_DIR}"
-          fi
-          ls -la "${TURBOWARP_DIR}"
-
-      # 步骤4：配置 Node.js 环境（Turbowarp 依赖 Node.js）
-      - name: 设置 Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: ${{ env.TURBOWARP_DIR }}/package-lock.json
-
-      # 步骤5：安装 Turbowarp 依赖并构建 Node API
-      - name: 构建 Turbowarp Node 模块
-        run: |
-          cd "${TURBOWARP_DIR}"
-          npm ci  # 安装依赖（严格匹配 lock 文件）
-          npm run build-node-prod  # 构建 Node.js 版本的 API
-
-      # 步骤6：编写 SB3 转 HTML 的脚本
-      - name: 生成转换脚本
-        run: |
-          cat > "${TURBOWARP_DIR}/convert-sb3.js" << 'EOF'
-          const fs = require('fs');
-          const path = require('path');
-          const Packager = require('./dist-node/index.js');
-
-          // 环境变量传入的参数
-          const sb3Path = process.env.SB3_PATH;
-          const outputHtmlPath = process.env.OUTPUT_HTML_PATH;
-
-          // 核心转换逻辑
-          const run = async () => {
-            // 创建输出目录
-            fs.mkdirSync(path.dirname(outputHtmlPath), { recursive: true });
-            
-            // 读取 SB3 文件
-            console.log(`📥 读取 SB3 文件: ${sb3Path}`);
-            const projectData = fs.readFileSync(sb3Path);
-
-            // 加载 Scratch 项目
-            console.log('🔧 加载项目...');
-            const loadedProject = await Packager.loadProject(projectData);
-
-            // 初始化 Turbowarp 打包器
-            const packager = new Packager.Packager();
-            packager.project = loadedProject;
-            packager.options.target = 'html'; // 指定输出为 HTML
-            packager.options.turbo = true;    // 启用 Turbo 模式优化
-
-            // 执行打包
-            console.log('⚙️ 转换 SB3 到 HTML...');
-            const result = await packager.package();
-
-            // 写入 HTML 文件
-            fs.writeFileSync(outputHtmlPath, result.data);
-            console.log(`✅ HTML 生成完成: ${outputHtmlPath}`);
-          };
-
-          // 执行并捕获错误
-          run().catch((err) => {
-            console.error('❌ 转换失败:', err);
-            process.exit(1);
-          });
-          EOF
-        env:
-          SB3_PATH: ${{ env.PROJECT_DIR }}/${{ inputs.sb3_filename }}
-          OUTPUT_HTML_PATH: ${{ env.OUTPUT_HTML_DIR }}/index.html
-
-      # 步骤7：执行 SB3 转 HTML 脚本
-      - name: 转换 SB3 到 HTML
-        run: |
-          cd "${TURBOWARP_DIR}"
-          node convert-sb3.js
-
-      # 步骤8：安装 Android 构建环境和 Cordova（HTML 转 APK 工具）
-      - name: 安装 Android & Cordova 依赖
-        run: |
-          # 安装系统依赖
-          sudo apt-get update
-          sudo apt-get install -y \
-            openjdk-17-jdk \
-            android-sdk \
-            gradle \
-            unzip \
-            wget
-
-          # 安装 Cordova
-          npm install -g cordova@12.0.0
-
-          # 配置 Android SDK 环境变量
-          echo "ANDROID_HOME=/usr/lib/android-sdk" >> $GITHUB_ENV
-          echo "PATH=\$PATH:/usr/lib/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_ENV
-
-          # 自动接受 Android SDK 许可
-          yes | sdkmanager --licenses || true
-
-          # 安装必要的 Android 组件（API 34 兼容大部分设备）
-          sdkmanager "platforms;android-34" "build-tools;34.0.0" "platform-tools"
-
-      # 步骤9：创建 Cordova 项目并打包 APK
-      - name: 用 Cordova 打包 HTML 为 APK
-        run: |
-          # 创建 Cordova 项目目录
-          mkdir -p "${CORDOVA_DIR}"
-          cd "${CORDOVA_DIR}"
-
-          # 初始化 Cordova 项目（指定包名和应用名）
-          cordova create app ${{ inputs.package_name }} "${{ inputs.app_name }}"
-          cd app
-
-          # 添加 Android 平台
-          cordova platform add android@12.0.0
-
-          # 替换 Cordova 默认页面为生成的 HTML
-          rm -rf www/*
-          cp -r "${OUTPUT_HTML_DIR}"/* www/
-
-          # 构建 APK（Debug 版本，无需签名）
-          cordova build android --debug
-
-          # 查找生成的 APK 并复制到易访问路径
-          APK_PATH=$(find platforms/android/app/build/outputs/apk/debug -name "*.apk" | head -1)
-          cp "$APK_PATH" "${CORDOVA_DIR}/${{ inputs.app_name }}_debug.apk"
-          echo "✅ APK 生成完成: ${CORDOVA_DIR}/${{ inputs.app_name }}_debug.apk"
-
-      # 步骤10：上传 APK 作为构建产物（供下载）
-      - name: 上传 APK 产物
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ inputs.app_name }}-apk-${{ github.run_id }}
-          path: ${{ env.CORDOVA_DIR }}/${{ inputs.app_name }}_debug.apk
-          retention-days: 30  # 产物保留 30 天
+Run cd "${TURBOWARP_DIR}"
+  cd "${TURBOWARP_DIR}"
+  node convert-sb3.js
+  shell: /usr/bin/bash -e {0}
+  env:
+    TURBOWARP_DIR: Turbowarp-packager
+    PROJECT_DIR: /home/runner/work/Turbowarp_compiler/Turbowarp_compiler/project
+    OUTPUT_HTML_DIR: /home/runner/work/Turbowarp_compiler/Turbowarp_compiler/output-html
+    CORDOVA_DIR: /home/runner/work/Turbowarp_compiler/Turbowarp_compiler/cordova-project
+node:internal/modules/cjs/loader:1210
+  throw err;
+  ^
+Error: Cannot find module './dist-node/index.js'
+Require stack:
+- /home/runner/work/Turbowarp_compiler/Turbowarp_compiler/Turbowarp-packager/convert-sb3.js
+    at Module._resolveFilename (node:internal/modules/cjs/loader:1207:15)
+    at Module._load (node:internal/modules/cjs/loader:1038:27)
+    at Module.require (node:internal/modules/cjs/loader:1289:19)
+    at require (node:internal/modules/helpers:182:18)
+    at Object.<anonymous> (/home/runner/work/Turbowarp_compiler/Turbowarp_compiler/Turbowarp-packager/convert-sb3.js:3:18)
+    at Module._compile (node:internal/modules/cjs/loader:1521:14)
+    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
+    at Module.load (node:internal/modules/cjs/loader:1266:32)
+    at Module._load (node:internal/modules/cjs/loader:1091:12)
+    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
+  code: 'MODULE_NOT_FOUND',
+  requireStack: [
+    '/home/runner/work/Turbowarp_compiler/Turbowarp_compiler/Turbowarp-packager/convert-sb3.js'
+  ]
+}
+Node.js v20.20.0
+Error: Process completed with exit code 1.
